# vtf-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: info.rs  png.rs  vtf.rs
src/: header.rs  image.rs  lib.rs  resources.rs  structs.rs  utils.rs  vtf.rs
tests/: info.rs  png.rs
tests/data/: out.vtf  rust.vtf  rust_dxt5.vtf  rust_rgb_8.vtf  rust_rgb_8_alpha.vtf  vtf_74.vtf
