[package]
name = "vtf"
description = "Valve Texture format library for Rust"
version = "0.2.1"
license = "MIT"
authors = ["Roman Shishkin <spark@uwtech.org>", "Robin Appelman <robin@icewind.nl>"]
repository = "https://github.com/roman901/vtf-rs"
edition = "2018"
rust-version = "1.67.0"
exclude = ["/tests"]

[dependencies]
image = "0.24.7"
texpresso = "2.0.1"
err-derive = "0.3.1"
parse-display = "0.8.2"
num_enum = "0.7.1"
byteorder = "1.5.0"
